UCF-APR2.4/ftr main/force-app/main/default/objects/TaskCreationConfig__mdt/TaskCreationConfig__mdt.object-meta.xml
<CustomObject>
    <label>Task Creation Config</label>
    <pluralLabel>Task Creation Configs</pluralLabel>
</CustomObject>