UCF-APR2.4/ftr main/force-app/main/default/objects/TaskCreationConfig__mdt/fields/AssignToUser__c.field-meta.xml
<CustomField>
    <fullName>AssignToUser__c</fullName>
    <description>UserName of the User to assign this task</description>
    <label>Assign To User (UserName)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>