UCF-APR2.4/ftr main/force-app/main/default/objects/TaskCreationConfig__mdt/fields/QueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>QueueDeveloperName__c</fullName>
    <label>Assign To Queue (DeveloperName)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>