UCF-APR2.4/ftr main/force-app/main/default/objects/TaskCreationConfig__mdt/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <label>Task RecordType (DeveloperName)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>