UCF-APR2.4/ftr main/force-app/main/default/objects/TaskCreationConfig__mdt/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M6</fullName>
                <default>true</default>
                <label>M6</label>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>